--- a/LibraryModule/build.gradle
+++ b/LibraryModule/build.gradle
@@ -18,6 +18,7 @@ android {
     }
 }
 
+//git push --mirror github
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation 'com.android.support:appcompat-v7:25.4.0'
