--- a/LibraryModule/build.gradle
+++ b/LibraryModule/build.gradle
@@ -25,7 +25,8 @@ android {
 //git push --mirror github
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation 'com.android.support:appcompat-v7:25.4.0'
+    implementation 'com.android.support:appcompat-v7:26.1.0'
+    implementation 'com.android.support:recyclerview-v7:26.1.0'
     implementation 'io.reactivex.rxjava2:rxandroid:2.0.1'
     implementation 'io.reactivex.rxjava2:rxjava:2.1.6'
     testImplementation 'junit:junit:4.12'
